projects/vb6parse/snapshots/parsers/cst/library/datetime/weekday/weekday_while_wend.snap
---
source: projects/vb6parse/tests/library/datetime/weekday.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: WhileStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: WhileKeyword
                  text: While
                - kind: Whitespace
                  text: " "
                - kind: BinaryExpression
                  children:
                    - kind: BinaryExpression
                      children:
                        - kind: CallExpression
                          children:
                            - kind: Identifier
                              text: Weekday
                            - kind: LeftParenthesis
                              text: (
                            - kind: ArgumentList
                              children:
                                - kind: Argument
                                  children:
                                    - kind: IdentifierExpression
                                      children:
                                        - kind: Identifier
                                          text: dt
                            - kind: RightParenthesis
                              text: )
                        - kind: Whitespace
                          text: " "
                        - kind: GreaterThanOrEqualOperator
                          text: ">="
                        - kind: Whitespace
                          text: " "
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: vbMonday
                    - kind: Whitespace
                      text: " "
                    - kind: AndKeyword
                      text: And
                    - kind: Whitespace
                      text: " "
                    - kind: BinaryExpression
                      children:
                        - kind: CallExpression
                          children:
                            - kind: Identifier
                              text: Weekday
                            - kind: LeftParenthesis
                              text: (
                            - kind: ArgumentList
                              children:
                                - kind: Argument
                                  children:
                                    - kind: IdentifierExpression
                                      children:
                                        - kind: Identifier
                                          text: dt
                            - kind: RightParenthesis
                              text: )
                        - kind: Whitespace
                          text: " "
                        - kind: LessThanOrEqualOperator
                          text: "<="
                        - kind: Whitespace
                          text: " "
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: vbFriday
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: Whitespace
                      text: "        "
                    - kind: AssignmentStatement
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: dt
                        - kind: Whitespace
                          text: " "
                        - kind: EqualityOperator
                          text: "="
                        - kind: Whitespace
                          text: " "
                        - kind: BinaryExpression
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: Identifier
                                  text: dt
                            - kind: Whitespace
                              text: " "
                            - kind: AdditionOperator
                              text: +
                            - kind: Whitespace
                              text: " "
                            - kind: NumericLiteralExpression
                              children:
                                - kind: IntegerLiteral
                                  text: "1"
                        - kind: Newline
                          text: "\n"
                    - kind: Whitespace
                      text: "    "
                - kind: WendKeyword
                  text: Wend
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
